[tool.poetry]
name = "dromedata"
version = "0.1.0"
description = "Pythonic data analytics libraries for Velodrome and Aerodrome."
authors = ["Jalil Farid <jalil@lunamonta.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "1.0.0"
aiohappyeyeballs = "2.4.0"
aiohttp = "3.10.5"
aiosignal = "1.3.1"
annotated-types = "0.7.0"
anyio = "4.4.0"
ape-arbitrum = "0.8.1"
ape-infura = "0.8.1"
argon2-cffi = "23.1.0"
argon2-cffi-bindings = "21.2.0"
arrow = "1.3.0"
asttokens = "2.4.1"
async-lru = "2.0.4"
attrs = "24.2.0"
babel = "2.16.0"
base58 = "1.0.3"
beautifulsoup4 = "4.12.3"
bitarray = "2.9.2"
bleach = "6.1.0"
build = "1.2.1"
cachecontrol = "0.14.0"
cached-property = "1.5.2"
certifi = "2024.7.4"
cffi = "1.17.0"
charset-normalizer = "3.3.2"
ckzg = "1.0.2"
cleo = "2.1.0"
click = "8.1.7"
comm = "0.2.2"
contourpy = "1.3.0"
crashtest = "0.4.1"
cryptography = "43.0.0"
cycler = "0.12.1"
cytoolz = "0.12.3"
dataclassy = "0.11.1"
debugpy = "1.8.5"
decorator = "5.1.1"
defusedxml = "0.7.1"
distlib = "0.3.8"
dulwich = "0.21.7"
eip712 = "0.2.10"
eth-account = "0.11.3"
eth-ape = {extras = ["recommended-plugins"], version = "^0.8.14"}
eth-bloom = "3.0.1"
eth-hash = "0.7.0"
eth-keyfile = "0.8.1"
eth-keys = "0.5.1"
eth-pydantic-types = "0.1.3"
eth-rlp = "1.0.1"
eth-tester = "0.11.0b2"
eth-typing = "4.4.0"
eth-utils = "4.1.1"
eth-abi = "5.1.0"
ethpm-types = "0.6.17"
evm-trace = "0.2.3"
evmchains = "0.0.11"
executing = "2.0.1"
fastjsonschema = "2.20.0"
filelock = "3.15.4"
fonttools = "4.53.1"
fqdn = "1.5.1"
frozenlist = "1.4.1"
greenlet = "3.0.3"
h11 = "0.14.0"
hexbytes = "0.3.1"
httpcore = "1.0.5"
httpx = "0.27.2"
idna = "3.8"
ijson = "3.3.0"
iniconfig = "2.0.0"
installer = "0.7.0"
ipykernel = "6.29.5"
ipython = "8.26.0"
ipywidgets = "8.1.5"
isoduration = "20.11.0"
jaraco-classes = "3.4.0"
jedi = "0.19.1"
jeepney = "0.8.0"
jinja2 = "3.1.4"
json5 = "0.9.25"
jsonpointer = "3.0.0"
jsonschema = "4.23.0"
jsonschema-specifications = "2023.12.1"
jupyter-console = "6.6.3"
jupyter-events = "0.10.0"
jupyter-lsp = "2.2.5"
jupyter-client = "8.6.2"
jupyter-core = "5.7.2"
jupyter-server = "2.14.2"
jupyter-server-terminals = "0.5.3"
jupyterlab = "4.2.5"
jupyterlab-pygments = "0.3.0"
jupyterlab-server = "2.27.3"
jupyterlab-widgets = "3.0.13"
keyring = "24.3.1"
kiwisolver = "1.4.5"
lazyasd = "0.1.4"
lru-dict = "1.2.0"
markdown-it-py = "3.0.0"
markupsafe = "2.1.5"
matplotlib = "3.9.2"
matplotlib-inline = "0.1.7"
maturin = "1.7.1"
mdurl = "0.1.2"
mistune = "3.0.2"
more-itertools = "10.4.0"
morphys = "1.0"
msgpack = "1.0.8"
msgspec = "0.18.6"
multidict = "6.0.5"
nbclient = "0.10.0"
nbconvert = "7.16.4"
nbformat = "5.10.4"
nest-asyncio = "1.6.0"
notebook = "7.2.2"
notebook-shim = "0.2.4"
numpy = "1.26.4"
overrides = "7.7.0"
packaging = "23.2"
pandas = "2.2.2"
pandocfilters = "1.5.1"
parsimonious = "0.10.0"
parso = "0.8.4"
pexpect = "4.9.0"
pillow = "10.4.0"
pkginfo = "1.11.1"
platformdirs = "4.2.2"
pluggy = "1.5.0"
poetry = "1.8.3"
poetry-core = "1.9.0"
poetry-plugin-export = "1.8.0"
polars = "1.6.0"
prometheus-client = "0.20.0"
prompt-toolkit = "3.0.47"
protobuf = "5.28.0"
psutil = "6.0.0"
ptyprocess = "0.7.0"
pure-eval = "0.2.3"
py-cid = "0.3.0"
py-ecc = "7.0.1"
py-evm = "0.10.1b1"
py-geth = "5.0.0"
py-multibase = "1.0.3"
py-multicodec = "0.2.1"
py-multihash = "0.2.3"
pyarrow = "17.0.0"
pycparser = "2.22"
pycryptodome = "3.20.0"
pydantic = "2.8.2"
pydantic-settings = "2.4.0"
pydantic-core = "2.20.1"
pygments = "2.18.0"
pyparsing = "3.1.4"
pyproject-hooks = "1.1.0"
pytest = "8.3.2"
python-baseconv = "1.2.2"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
python-json-logger = "2.0.7"
pytz = "2024.1"
pyunormalize = "15.1.0"
pyyaml = "6.0.2"
pyzmq = "26.2.0"
qtconsole = "5.6.0"
qtpy = "2.4.1"
rapidfuzz = "3.9.6"
referencing = "0.35.1"
regex = "2024.7.24"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
rfc3339-validator = "0.1.4"
rfc3986-validator = "0.1.1"
rich = "13.8.0"
rlp = "4.0.1"
rpds-py = "0.20.0"
safe-pysha3 = "1.0.4"
secretstorage = "3.3.3"
semantic-version = "2.10.0"
send2trash = "1.8.3"
setuptools = "72.1.0"
shellingham = "1.5.4"
six = "1.16.0"
sniffio = "1.3.1"
sortedcontainers = "2.4.0"
soupsieve = "2.6"
sqlalchemy = "2.0.32"
stack-data = "0.6.3"
terminado = "0.18.1"
tinycss2 = "1.3.0"
tomlkit = "0.13.2"
toolz = "0.12.1"
tornado = "6.4.2"
tqdm = "4.66.5"
traitlets = "5.14.3"
trie = "3.0.1"
trove-classifiers = "2024.7.2"
types-python-dateutil = "2.9.0.20240821"
types-requests = "2.32.0.20240712"
typing-extensions = "4.12.2"
tzdata = "2024.1"
uri-template = "1.3.0"
urllib3 = "2.2.2"
varint = "1.0.2"
virtualenv = "20.26.3"
watchdog = "3.0.0"
wcwidth = "0.2.13"
web3 = "6.20.1"
webcolors = "24.8.0"
webencodings = "0.5.1"
websocket-client = "1.8.0"
websockets = "13.0.1"
wheel = "0.43.0"
widgetsnbextension = "4.0.13"
yarl = "1.9.4"
ape-base = "^0.8.0"
ape-optimism = "^0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
